--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             <div>
             <div>SMALL IMAGE ONE</div>
             <div>SMALL IMAGE TWO</div>
+            <div>SMALL IMAGE THREE</div>
+            <div>SMALL IMAGE FOUR</div>
             </div> 
         </div>
         <div>contact me</div>
